Some refactoring and temporary fix for picture compression.

--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,13 @@ apply plugin: 'application'
 
 mainClassName = "ru.b00blik.resizeapp.ResizeForm"
 
+ScalaCompileOptions.metaClass.useAnt = false
+
 repositories {
     jcenter()
     mavenCentral()
 }
+
 
 jar {
     enabled = false
